// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Output screens test that outputscreen renders correctly 1`] = `
<div
  className="flexColumn"
>
  <OutputScreenContainer
    app={
      App {
        "image_key": 0,
        "images": Array [],
      }
    }
  />
  <div
    className="flexRow"
  >
    <div
      className="button"
      onClick={[Function]}
    >
      Image choice
    </div>
    <div
      className="button"
      onClick={[Function]}
    >
      Scene selection
    </div>
  </div>
</div>
`;

exports[`Output screens test that outputscreencontainer renders correctly 1`] = `
<OutputScreenContainer
  app={
    App {
      "image_key": 0,
      "images": Array [],
    }
  }
  input_options={
    Object {
      "input": "webcam",
    }
  }
>
  <div
    className="flexColumn"
  >
    <canvas
      className="dontGrow"
    />
    <div
      className="flexRow"
    >
      <BoundingBoxSettings>
        <div>
          <label>
            Number of boxes:
          </label>
          <input
            defaultValue="5"
            max="10"
            min="1"
            type="number"
          />
          <label>
            Min threshold:
          </label>
          <input
            defaultValue="0.5"
            max="1"
            min="0"
            step="0.01"
            type="number"
          />
        </div>
      </BoundingBoxSettings>
      <div
        className="button"
        onClick={[Function]}
      >
        Redraw
      </div>
    </div>
  </div>
</OutputScreenContainer>
`;
